UI changes for inbox section

--- a/src/app/inbox/inbox.component.html
+++ b/src/app/inbox/inbox.component.html
@@ -1,5 +1,5 @@
 <div layout="row" layout-fill layout-align="top center" flex>
-  <md-content flex>
+  <md-content flex class="inbox-section">
     <div class="assign-order" layout="row" >
       <span> Sort By: </span>
       <div layout="row" flex >
