--- a/src/app/order/components/create-order.component.html
+++ b/src/app/order/components/create-order.component.html
@@ -1,25 +1,74 @@
 <div class="orders">
 
+  <div layout="row" layout-xs="column" class="right-top-section">
+    <div flex>
+      <md-list layout="column" layout-padding>
+        <md-list-item class="md-3-line col-order-detail">
+          <img src="app/share/images/avtars/Swapnil.jpg" class="md-avatar" >
+          <div class="md-list-item-text">
+            <h2>Order Details</h2>
+          </div>
+        </md-list-item>
+      </md-list>
+    </div>
+    <div flex>
+      <md-list layout="column" layout-padding layout-align="end end">
+        <md-list-item class="md-3-line col-order-detail">
+          <div class="md-list-item-text">
+            <h3>Order Date : 24/01/15 </h3>
+            <h3>Delivery Date : 02/02/15 </h3>
+          </div>
+        </md-list-item>
+      </md-list>
+    </div>
+  </div>
+
+  <div layout="row" layout-xs="column" layout-padding class="assigned-section">
+    <div flex class="assigned-select">
+      <label flex>Assigned to :</label>
+      <md-input-container class="md-block" flex-gt-sm flex>
+        <select>
+          <option>1212</option>
+          <option>554</option>
+          <option>1214542</option>
+        </select>
+      </md-input-container>
+      <img src="app/order/images/chat-box.svg" class="chat-icon" >
+    </div>
+    <div flex class="status-update">
+      <label flex>Status :</label>
+      <div layout="row" layout-wrap>
+      <div flex-xs="100" flex="50">
+        <md-checkbox aria-label="Checkbox 1"></md-checkbox>
+        <md-checkbox aria-label="Checkbox 1"></md-checkbox>
+        <md-checkbox aria-label="Checkbox 1"></md-checkbox>
+      </div>
+    </div>
+    </div>
+    <div flex layout="row" layout-align="end start">
+        Number of products : 84
+    </div>
+  </div>
 
   <div class="order-details">
-    <div *ngIf="orderStage === 'createOrder'" layout="row" layout-wrap class="row-title"  style="background: #B3B3B3">
-      <div flex="66">
+    <div *ngIf="orderStage === 'createOrder'" layout="row" layout-wrap class="row-title">
+      <div flex="60">
         Product
       </div>
-      <div class="content-center1" flex="17">
+      <div class="content-center1" flex="20">
         Quantity
       </div>
-      <div class="content-center" flex="17">
+      <div class="content-center" flex="20">
         Availability
       </div>
     </div>
     <div *ngIf="orderStage === 'createOrder'">
       <div layout-wrap *ngFor="#item of items" layout="row" class="md-caption md-list-item-text order-row-list" flex >
-        <div flex="70">
+        <div flex="60">
           <h4 layout-margin>{{item.name}}</h4>
           <h4 layout-margin>{{item.detail}}, {{item.variant}}</h4>
         </div>
-        <div class="content-center" flex="15">
+        <div class="content-center" flex="20">
           <div *ngIf="item.availability == 'Yes'">
             <input type='number'
                    [(ngModel)]="item.qty"
@@ -33,70 +82,58 @@
                     (click)="item.qty=item.qty+1">+</button>
           </div>
         </div>
-        <div class="content-center" flex="15">
+        <div class="content-center" flex="20">
           <h4 layout-margin>{{item.availability}}</h4>
         </div>
       </div>
     </div>
 
-
   <div *ngIf="orderStage === 'preview' && orderDetails.length > 0">
-    <div layout="row" class="md-caption">
-      <div flex="20" layout-padding>
-        <b>Product Name</b>
+    <div layout="row" layout-wrap class="row-title">
+      <div flex="35">
+        Product
       </div>
-      <div flex="20" layout-padding>
-        <b>Details</b>
+      <div class="content-center1" flex="20">
+        Variant
       </div>
-      <div flex="20" layout-padding>
-        <b>Variant</b>
+      <div class="content-center1" flex="20">
+        Quantity
       </div>
-      <div flex="20" layout-padding>
-        <b>Quantity</b>
-      </div>
-      <div flex="20" layout-padding>
-        <b>Action</b>
+      <div class="content-center" flex="20">
+        Availability
       </div>
     </div>
+    <div layout="row" *ngFor="#item of orderDetails" class="md-caption md-list-item-text order-row-list">
 
-    <div layout="row" *ngFor="#item of orderDetails" class="md-caption">
-      <div flex="20" layout-padding>
-        {{item.name}}
+      <div flex="35">
+        <h4 layout-margin>{{item.name}}</h4>
+        <h4 layout-margin>{{item.detail}}</h4>
       </div>
-      <div flex="20" layout-padding>
-        {{item.detail}}
-      </div>
-      <div flex="20" layout-padding>
+
+      <div flex="20">
         {{item.variant}}
       </div>
-      <div flex="20" layout-padding>
+
+      <div flex="20">
         <input type='number' [(ngModel)]="item.qty" class='qty'>
       </div>
-      <div flex="20" layout-padding>
-        <button (click)="removeItem(item)">Remove</button>
-      </div>
-    </div>
 
-    <!--   <table>
-         <tr class="title-labrl">
-           <td><b>Product Name</b></td>
-           <td><b>Brand Name</b></td>
-           <td><b>Variant</b></td>
-           <td><b>Quantity</b></td>
-           <td><b>Action</b></td>
-         </tr>
-         <tr *ngFor="#item of orderDetails">
-           <td>{{item.productName}}</td>
-           <td>{{item.brand}}</td>
-           <td>{{item.Variant}}</td>
-           <td><input type='number'
-                      [(ngModel)]="item.quantity"
-                      class='qty'></td>
-           <td><button (click)="removeItem(item)">Remove</button></td>
-         </tr>
-       </table>-->
+      <div class="content-center" flex="20">
+        <button md-raised-button class="md-raised md-warn" (click)="removeItem(item)">Remove</button>
+      </div>
+
+    </div>
   </div>
+
+
+
   <div class="tableClass" *ngIf="orderStage === 'basicDetails' && orderDetails.length >0" >
+      <div layout-gt-sm="row">
+    <md-input-container class="md-block" flex-gt-sm>
+      <label>Title</label>
+      <input md-input [(value)]="user.title">
+    </md-input-container>
+  </div>
     <div><label>Compnay Name </label>
       <input [(ngModel)] = "currentOrder.companyName" placeholder="name">
     </div>
@@ -202,16 +239,13 @@
     </div>
 
   </div>
-    <!--  <button (click)="createOrder()" *ngIf="orderPreview == false">Create Order</button>
 
-      <button (click)="confirmOrder()" *ngIf="orderPreview == true">Confirm</button>
+    <div *ngIf="displayError == true">{{ errorMessage }}</div>
 
-      <button (click)="orderPreview = false" *ngIf="orderPreview == true">Cancel</button>
+    <div *ngIf="displaySuccess == true">{{ successMessage }} {{orderID}}</div>
 
-      <div *ngIf="displayError == true">{{ errorMessage }}</div>
-
-      <div *ngIf="displaySuccess == true">{{ successMessage }} {{orderID}}</div>-->
-    <button md-raised-button class="md-primary" (click)="createOrder()" flex="auto" *ngIf="orderStage==='createOrder'">Create Order</button>
+  </div>
+  <button md-raised-button class="md-primary" (click)="createOrder()" flex="auto" *ngIf="orderStage==='createOrder'">Create Order</button>
 
     <!--<button md-raised-button class="md-raised md-primary" (click)="createOrder()" *ngIf="orderPreview == false">Create Order</button>-->
 
@@ -219,13 +253,6 @@
     <button md-raised-button class="md-raised md-primary" (click)="proceedNext()" *ngIf="orderStage === 'basicDetails'">Proceed Next</button>
     <button md-raised-button class="md-raised md-primary" (click)="placeOrder()" *ngIf="orderStage === 'fullPreview'">Place this Order</button>
     <button md-raised-button class="md-raised md-primary" (click)="orderStage='createOrder'" >Cancel</button>
-
-    <div *ngIf="displayError == true">{{ errorMessage }}</div>
-
-    <div *ngIf="displaySuccess == true">{{ successMessage }} {{orderID}}</div>
-
-  </div>
-
 <!--  <div class="tableClass" *ngIf="orderPreview == false || orderDetails.length == 0">
 
     <md-list-item *ngFor="#item of items" layout="row" class="md-caption md-list-item-text" flex>
