--- a/src/app/inbox/item-views/email-compact-view.html
+++ b/src/app/inbox/item-views/email-compact-view.html
@@ -6,7 +6,7 @@
     <img [src]="'app/share/images/company-logo/'+email.fromCompany + '.png'" class="md-avatar client-img" alt="{{email.from}}"/>
   </div>
 
-  <div class="md-list-item-text" layout="column">
+  <div class="md-list-item-text" layout="column" (click)="showDetails = !showDetails">
     <h3>{{ email.subject }}</h3>
     <h4>{{ email.from }}</h4>
     <!--<div>{{ email.defaultTask.status }}</div>-->
@@ -21,5 +21,36 @@
   <p class="delivery-date">Delivery by Mar 20, 2016</p>
 
 </md-list-item>
+
+<!--<div *ngIf="showDetails == true">
+  <div layout="row" layout-xs="column">
+    <div flex>
+      <h3>Content </h3>
+      <div>{{ email.body}}</div>
+    </div>
+    <div flex>
+      <h3>Attachments</h3>
+      <iframe src="app/inbox/images/LicenseCertificate.pdf" style="width:100%; height:500px;" frameborder="0"></iframe>
+    </div>
+  </div>
+</div>-->
+
+
+
+<div *ngIf="showDetails == true">
+  <md-tabs md-dynamic-height md-border-bottom>
+    <template md-tab label="Content">
+      <md-content class="md-padding">
+
+        <div>{{ email.body}}</div>
+      </md-content>
+    </template>
+    <template md-tab label="Attachments">
+      <md-content class="md-padding">
+        <iframe src="app/inbox/images/LicenseCertificate.pdf" style="width:100%; height:500px;" frameborder="0"></iframe>
+      </md-content>
+    </template>
+  </md-tabs>
+</div>
 
 
