Fixed some issues in left navigation

--- a/src/app/inbox/inbox.component.html
+++ b/src/app/inbox/inbox.component.html
@@ -19,7 +19,7 @@
     </div>
 
     <md-list class="inbox-list">
-      <div *ngFor="#item of itemList">
+      <div *ngFor="#item of (itemList | inboxFilter:'filterBy': filterBy )">
         <ib-email-compact-view [email]="item" *ngIf="item.type == 'Email'"></ib-email-compact-view>
         <ib-order-compact-view [order]="item" *ngIf="item.type == 'Order'"></ib-order-compact-view>
         <ib-audio-compact-view [audioContent]="item" *ngIf="item.type == 'AudioContent'"></ib-audio-compact-view>
