--- a/src/app/inbox-app.html
+++ b/src/app/inbox-app.html
@@ -1,16 +1,17 @@
 <div layout="row">
   <md-sidenav-container layout="row" flex="10" layout-align="center center">
-    <md-sidenav class="leftnav" name="left" [style]="hasMedia('gt-sm') ? 'side' : 'over'">
+    <md-sidenav class="leftnav" name="left" [style]="hasMedia('gt-md') ? 'side' : 'over'">
       <ib-left-nav>Left Navigation</ib-left-nav>
     </md-sidenav>
   </md-sidenav-container>
 
-  <md-content flex >
+  <md-content flex>
+
     <md-toolbar class="toolbar">
-        <ib-header flex layout="row" layout-align="end none">Header</ib-header>
+      <ib-header flex layout="row" layout-align="end none">Header</ib-header>
     </md-toolbar>
 
-    <md-content flex >
+    <md-content flex>
       <div layout="column" layout-fill layout-align="top center">
         <router-outlet></router-outlet>
       </div>
